portal-mvp/gh-action-idp-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gh-action-idp
  labels:
    istio.io/rev: 1-22
