portal-mvp/idp-parent-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: idp-parent-route
  namespace: gh-action-idp
  labels:
    example: idp-parent-route
    gateway: https
spec:
  hostnames:
  - "idp.glootest.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - name: '*'
          namespace: gh-action-idp
          group: gateway.networking.k8s.io
          kind: HTTPRoute
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: gh-action-idp-route-policies
